Fixed event view
/**v1.0.7 | Calendar Branch Ver. | Last Updated: 2 November 2020 | 9:13 AM EST
 * View event context menu is in dark mode.
 * 
 * Need to fix:
 * -Agenda view (top right) is not in dark mode.
 * -Minor graphical bugs in week view (top right).
 * -New event context menu.
 * -Month selection context menu.
 * -Calendar feed.
 * -Possibly undated drop down menu.
 * -Possible scroll bar color (may be a winodws setting).
 * 
 * Bugs:
 * -Highlight for class selection makes text hard to see.
 * -Current date highlight for the mini calendar
 * is being overwritten with the non-selected days
 * var(--text) color.
 */

Updated naming protocols for branches.

--- a/CanvasDarkMode.user.css
+++ b/CanvasDarkMode.user.css
@@ -1,21 +1,20 @@
 /* ==UserStyle==
-@name        myLearning Dark Mode Testing
+@name        Calendar Branch
 @namespace   soupyzinc
-@version     1.0.x
+@version     1.0.7
 @homepageURL https://github.com/SoupyzInc/CanvasDarkMode
 @supportURL  https://github.com/SoupyzInc/CanvasDarkMode/issues
 @updateURL   https://raw.githubusercontent.com/SoupyzInc/CanvasDarkMode/main/CanvasDarkMode.user.css
 @license     MIT
 @author      Matthew Okashita
 ==/UserStyle== */
-/**v1.0.X | Calendar Branch Ver. | Last Updated: 2 November 2020 | 9:13 AM EST
- * Fixing Class Selection
+/**v1.0.7 | Calendar Branch Ver. | Last Updated: 2 November 2020 | 9:13 AM EST
+ * View event context menu is in dark mode.
  * 
  * Need to fix:
  * -Agenda view (top right) is not in dark mode.
  * -Minor graphical bugs in week view (top right).
  * -New event context menu.
- * -Viewing existing event context menu.
  * -Month selection context menu.
  * -Calendar feed.
  * -Possibly undated drop down menu.
@@ -500,5 +499,22 @@
         border-radius: 3px;
         border: 1px solid #384249;
         background: var(--light-grey) !important;
+    }
+    
+    /*Preview Selected Event*/
+    .event-details {
+        position: absolute;
+        z-index: 1000;
+        border: 1px solid var(--text) !important
+        box-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+        background-color: var(--light-grey) !important;
+        color: var(--text) !important;
+        min-width: 320px;
+        max-width: 500px;
+    }
+    
+    /*Preview Selected Even Time and Datet*/
+    .event-details-timestring {
+        color: var(--text) !important;
     }
 }
